# FMODCustomPlugins

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
BitCrasher/: BitCrasher.cpp  BitCrasher.dsp  FaustBitCrasher.h
BuildPlugins/GeneticReverb/: README.md
GeneticReverb/: AnalysisHelpers.h  ConvolutionProcessor.cpp  ConvolutionProcessor.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GeneticReverb.cpp
PSOReverb/: LICENSE  README.md
PSOReverb/IRGenerator/: Cargo.toml
PSOReverb/IRGenerator/src/: allpass.rs  biquad.rs  main.rs  pso.rs
Template/: Template.cpp
